# easio-mvp

./: .gitignore  AGENTS.md  CODEBASE_CLEANUP_ANALYSIS.md  CODEBASE_REVIEW_FINAL.md  Dockerfile  FRONTEND.md  README.md  VAULT_EXPLANATION.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  supabase_vault_setup.sql
backend/: __init__.py  app.py  config.py  dependencies.py  routes.py  schemas.py  worker.py
backend/db/: __init__.py  models.py
backend/oauth/: __init__.py  common.py  gmail.py  routes.py  state.py
backend/repositories/: __init__.py  integrations_repo.py  oauth_state_repo.py  supabase_repo.py
backend/runtime/: __init__.py  cache.py  config.py  factory.py  loader.py  tool_registry.py
backend/services/: __init__.py  airtable_oauth.py  gmail.py  gmail_oauth.py  integration_secrets.py  vault.py
backend/tests/: test_agent_context.py  test_agent_factory.py  test_airtable_oauth.py  test_airtable_runtime.py  test_gmail_helpers.py  test_gmail_oauth_service.py  test_integration_secrets.py  test_routes_paths.py  test_supabase_repo_paths.py
docs/: deployment.md  domain_model.md  platformdesc.md  testing.md  workflow-code-review.md
docs/examples/: agent.py
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: Router.tsx  main.tsx  styles.css
migrations/: 001_add_profile_email.sql  002_create_oauth_state_tokens.sql
reference code/: multi_agent_ref.py
scripts/: __init__.py  create_token.py  vault_diagnostic.py
(+58 files in other folders)
